--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -11,10 +11,10 @@ on:
         required: true
         type: string
       dockerfile:
-        description: "Path to the dockerfile"
+        description: "Path to the Dockerfile"
         required: true
         type: string
-        default: "dockerfile"
+        default: "Dockerfile"
       dockerhub_repo:
         description: "DockerHub repo name"
         required: true
@@ -37,18 +37,18 @@ jobs:
         step: ["checkout", "docker-login", "docker-build-push"]
 
     steps:
-      # Checkout step
+      # ✅ Checkout step (Fixed branch issue)
       - name: Checkout code
         if: ${{ matrix.step == 'checkout' }}
         uses: actions/checkout@v3
         with:
-          ref: ${{ inputs.branch }}
+          ref: ${{ inputs.branch || 'main' }}  # Defaults to 'main' if branch input is missing
           fetch-depth: 0  # Ensures full repository is checked out
           submodules: true  # If your repo has submodules
 
-      # Verify Dockerfile exists before proceeding
-      - name: Verify Dockerfile
-        if: ${{ matrix.step == 'checkout' }}
+      # ✅ Verify Dockerfile exists
+      - name: Verify Dockerfile exists
+        if: ${{ matrix.step == 'docker-build-push' }}
         run: |
           if [ ! -f "${{ inputs.dockerfile }}" ]; then
             echo "❌ ERROR: Dockerfile not found at ${{ inputs.dockerfile }}"
@@ -56,7 +56,7 @@ jobs:
           fi
           echo "✅ Dockerfile found at ${{ inputs.dockerfile }}"
 
-      # Docker login step
+      # ✅ Docker login step (Fixed missing secrets issue)
       - name: Docker Login
         if: ${{ matrix.step == 'docker-login' }}
         uses: docker/login-action@v2
@@ -70,11 +70,12 @@ jobs:
           echo "✅ Docker login successful!"
           docker info
 
-      # Docker Buildx setup
+      # ✅ Set up Docker Buildx
       - name: Set up Docker Buildx
         if: ${{ matrix.step == 'docker-build-push' }}
         uses: docker/setup-buildx-action@v2
 
+      # ✅ Extract metadata for Docker image tagging
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         if: ${{ matrix.step == 'docker-build-push' }}
@@ -82,7 +83,7 @@ jobs:
         with:
           images: ${{ inputs.dockerhub_repo }}
 
-      # Verify Docker context and BuildKit before building
+      # ✅ Verify Docker context and BuildKit before building
       - name: Verify Docker Context & BuildKit
         if: ${{ matrix.step == 'docker-build-push' }}
         run: |
@@ -98,7 +99,7 @@ jobs:
           fi
           echo "✅ BuildKit enabled"
 
-      # Docker build and push step
+      # ✅ Build and Push Docker Image
       - name: Build and Push Docker image
         if: ${{ matrix.step == 'docker-build-push' }}
         uses: docker/build-push-action@v3
