--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -14,12 +14,17 @@ on:
         description: "Path to the Dockerfile"
         required: true
         type: string
-        default: "Dockerfile"
+        default: "dockerfile"
       dockerhub_repo:
         description: "DockerHub repository name"
         required: true
         type: string
         default: "venkatalakshmi0448/nodejs-docker"
+      docker_tag:
+        description: "Docker image tag"
+        required: false
+        type: string
+        default: "latest"
       deploy_env:
         description: "Deployment environment"
         required: true
