--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -31,6 +31,14 @@ on:
         type: string
         default: "staging"
 
+      secrets:
+        DOCKERHUB_USERNAME:
+           description: "DockerHub username"
+           required: true
+        DOCKERHUB_PASSWORD:
+           description: "DockerHub password or personal access token"
+           required: true
+
 jobs:
   validate:
     runs-on: ubuntu-latest
