--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -57,6 +57,7 @@ jobs:
       # Validate Inputs Before Proceeding
       - name: Validate Inputs
         run: |
+          echo "🚀 Validating inputs..."
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
             echo "❌ dockerhub_repo is missing!"
             exit 1
@@ -69,6 +70,7 @@ jobs:
       # Validate Secrets Before Proceeding
       - name: Validate Secrets
         run: |
+          echo "🔐 Validating secrets..."
           if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ secrets.DOCKERHUB_PASSWORD }}" ]]; then
             echo "❌ Required secrets are missing!"
             exit 1
@@ -85,6 +87,7 @@ jobs:
       # Verify Docker Login
       - name: Verify Docker Login
         run: |
+          echo "🔍 Checking Docker login..."
           if ! docker info | grep -q 'Username'; then
             echo "❌ Docker login failed!"
             exit 1
@@ -94,6 +97,13 @@ jobs:
       # Set up Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      # Debug Docker Image Tags
+      - name: Debug Docker Image Tags
+        run: |
+          echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
+          echo "🏷️  Docker Image Tag: ${{ inputs.docker_tag }}"
+          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}"
 
       # Build and Push Docker Image
       - name: Build and Push Docker Image
