--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -96,4 +96,4 @@ jobs:
       # Debug Docker Image Tags
       - name: Debug Docker Image Tags
         run: |
-          echo "🐳"
+          echo ""
