--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -37,10 +37,14 @@ jobs:
     runs-on: ubuntu-latest
     environment:
       name: validate
+    strategy:
+      matrix:
+        step: ['checkout', 'docker-login', 'docker-build-push']
 
     steps:
-      # Checkout Repository
-      - name: Checkout code
+      # Checkout Code
+      - name: Checkout Repository
+        if: matrix.step == 'checkout'
         uses: actions/checkout@v3
         with:
           ref: ${{ inputs.branch }}
@@ -49,31 +53,31 @@ jobs:
 
       # Validate Inputs Before Proceeding
       - name: Validate Inputs
+        if: matrix.step == 'checkout'
         run: |
-          echo "Validating inputs..."
+          echo "🚀 Validating inputs..."
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
-            echo "dockerhub_repo is missing! Using default: venkatalakshmi0448/nodejs-docker"
-            dockerhub_repo="venkatalakshmi0448/nodejs-docker"
-          else
-            dockerhub_repo="${{ inputs.dockerhub_repo }}"
+            echo "⚠️ dockerhub_repo is missing! Using default: venkatalakshmi0448/nodejs-docker"
           fi
           if [[ -z "${{ inputs.docker_tag }}" ]]; then
-            echo "docker_tag is empty, using 'latest'."
+            echo "⚠️ docker_tag is empty, using 'latest'."
           fi
-          echo "Inputs validation passed."
+          echo "✅ Inputs validation passed."
 
       # Validate Secrets Before Proceeding
       - name: Validate Secrets
+        if: matrix.step == 'docker-login'
         run: |
-          echo "Validating secrets..."
+          echo "🔐 Validating secrets..."
           if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ secrets.DOCKERHUB_PASSWORD }}" ]]; then
-            echo "Required secrets are missing!"
+            echo "❌ Required secrets are missing!"
             exit 1
           fi
-          echo "Secrets validation passed."
+          echo "✅ Secrets validation passed."
 
       # Docker Login
       - name: Log in to DockerHub
+        if: matrix.step == 'docker-login'
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -81,19 +85,37 @@ jobs:
 
       # Verify Docker Login
       - name: Verify Docker Login
+        if: matrix.step == 'docker-login'
         run: |
           echo "🔍 Checking Docker login..."
           if ! docker info | grep -q 'Username'; then
-            echo "Docker login failed!"
+            echo "❌ Docker login failed!"
             exit 1
           fi
-          echo "Docker login successful!"
+          echo "✅ Docker login successful!"
 
       # Set up Buildx
       - name: Set up Docker Buildx
+        if: matrix.step == 'docker-build-push'
         uses: docker/setup-buildx-action@v2
 
       # Debug Docker Image Tags
       - name: Debug Docker Image Tags
+        if: matrix.step == 'docker-build-push'
         run: |
-          echo ""
+          echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
+          echo "🏷️  Docker Image Tag: ${{ inputs.docker_tag }}"
+          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}"
+
+      # Build and Push Docker Image
+      - name: Build and Push Docker Image
+        if: matrix.step == 'docker-build-push'
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ${{ inputs.dockerfile }}
+          push: true
+          tags: |
+            ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}
+            ${{ inputs.dockerhub_repo }}:latest
+          labels: "built-by=github-actions"
