--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -23,7 +23,7 @@ on:
         default: "venkatalakshmi0448/nodejs-docker"
       docker_tag:
         description: "Docker image tag"
-        required: false
+        required: true
         type: string
         default: "latest"
       deploy_env:
