--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -25,7 +25,7 @@ on:
         description: "Docker image tag"
         required: false
         type: string
-        default: ":latest"
+        default: "latest"
       deploy_env:
         description: "Deployment environment"
         required: false
@@ -114,7 +114,7 @@ jobs:
         run: |
           echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
           echo "🏷️ Docker Image Tag: ${{ env.docker_tag }}"
-          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}"
+          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}/${{ env.docker_tag }}"
 
       # Build and Push Docker Image
       - name: Build and Push Docker Image
