--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -21,11 +21,6 @@ on:
         required: false
         type: string
         default: "venkatalakshmi0448/nodejs-docker"
-      docker_tag:
-        description: "Docker image tag"
-        required: false
-        type: string
-        default: "latest"
       deploy_env:
         description: "Deployment environment"
         required: false
@@ -51,29 +46,20 @@ jobs:
           fetch-depth: 0
           submodules: true
 
-      # Validate Inputs
+      # Validate Inputs Before Proceeding
       - name: Validate Inputs
         if: matrix.step == 'checkout'
         run: |
           echo "🚀 Validating inputs..."
-          
-          # Ensure dockerhub_repo is not empty
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
-            echo "❌ dockerhub_repo is missing!"
-            exit 1
+            echo "⚠️ dockerhub_repo is missing! Using default: venkatalakshmi0448/nodejs-docker"
           fi
-
-          # Ensure docker_tag is not empty
           if [[ -z "${{ inputs.docker_tag }}" ]]; then
             echo "⚠️ docker_tag is empty, using 'latest'."
-            echo "docker_tag=latest" >> $GITHUB_ENV
-          else
-            echo "docker_tag=${{ inputs.docker_tag }}" >> $GITHUB_ENV
           fi
-
           echo "✅ Inputs validation passed."
 
-      # Validate Secrets
+      # Validate Secrets Before Proceeding
       - name: Validate Secrets
         if: matrix.step == 'docker-login'
         run: |
@@ -113,8 +99,8 @@ jobs:
         if: matrix.step == 'docker-build-push'
         run: |
           echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
-          echo "🏷️ Docker Image Tag: ${{ env.docker_tag }}"
-          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}"
+          echo "🏷️  Docker Image Tag: ${{ inputs.docker_tag }}"
+          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}"
 
       # Build and Push Docker Image
       - name: Build and Push Docker Image
@@ -125,6 +111,6 @@ jobs:
           file: ${{ inputs.dockerfile }}
           push: true
           tags: |
-            ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}
+            ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}
             ${{ inputs.dockerhub_repo }}:latest
           labels: "built-by=github-actions"
