--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -20,7 +20,12 @@ on:
         description: "DockerHub repository name"
         required: false
         type: string
-        default: "venkatalakshmi0448/myimage"
+        default: "venkatalakshmi0448/nodejs-docker"
+      docker_tag:
+        description: "Docker image tag"
+        required: false
+        type: string
+        default: "latest"
       deploy_env:
         description: "Deployment environment"
         required: false
@@ -37,7 +42,7 @@ jobs:
         step: ['checkout', 'docker-login', 'docker-build-push']
 
     steps:
-      # Checkout Code
+      # ✅ Checkout Code
       - name: Checkout Repository
         if: matrix.step == 'checkout'
         uses: actions/checkout@v3
@@ -46,20 +51,29 @@ jobs:
           fetch-depth: 0
           submodules: true
 
-      # Validate Inputs Before Proceeding
+      # ✅ Validate Inputs
       - name: Validate Inputs
         if: matrix.step == 'checkout'
         run: |
           echo "🚀 Validating inputs..."
+          
+          # Ensure dockerhub_repo is not empty
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
-            echo "⚠️ dockerhub_repo is missing! Using default: venkatalakshmi0448/myimage"
+            echo "❌ dockerhub_repo is missing!"
+            exit 1
           fi
+
+          # Ensure docker_tag is not empty
           if [[ -z "${{ inputs.docker_tag }}" ]]; then
             echo "⚠️ docker_tag is empty, using 'latest'."
+            echo "docker_tag=latest" >> $GITHUB_ENV
+          else
+            echo "docker_tag=${{ inputs.docker_tag }}" >> $GITHUB_ENV
           fi
+
           echo "✅ Inputs validation passed."
 
-      # Validate Secrets Before Proceeding
+      # ✅ Validate Secrets
       - name: Validate Secrets
         if: matrix.step == 'docker-login'
         run: |
@@ -70,7 +84,7 @@ jobs:
           fi
           echo "✅ Secrets validation passed."
 
-      # Docker Login
+      # ✅ Docker Login
       - name: Log in to DockerHub
         if: matrix.step == 'docker-login'
         uses: docker/login-action@v2
@@ -78,7 +92,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      # Verify Docker Login
+      # ✅ Verify Docker Login
       - name: Verify Docker Login
         if: matrix.step == 'docker-login'
         run: |
@@ -89,20 +103,20 @@ jobs:
           fi
           echo "✅ Docker login successful!"
 
-      # Set up Buildx
+      # ✅ Set up Docker Buildx
       - name: Set up Docker Buildx
         if: matrix.step == 'docker-build-push'
         uses: docker/setup-buildx-action@v2
 
-      # Debug Docker Image Tags
+      # ✅ Debug Docker Image Tags
       - name: Debug Docker Image Tags
         if: matrix.step == 'docker-build-push'
         run: |
           echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
-          echo "🏷️  Docker Image Tag: ${{ inputs.docker_tag }}"
-          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}"
+          echo "🏷️ Docker Image Tag: ${{ env.docker_tag }}"
+          echo "📝 Full Image Name: ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}"
 
-      # Build and Push Docker Image
+      # ✅ Build and Push Docker Image
       - name: Build and Push Docker Image
         if: matrix.step == 'docker-build-push'
         uses: docker/build-push-action@v5
@@ -111,6 +125,6 @@ jobs:
           file: ${{ inputs.dockerfile }}
           push: true
           tags: |
-            ${{ inputs.dockerhub_repo }}:${{ inputs.docker_tag }}
+            ${{ inputs.dockerhub_repo }}:${{ env.docker_tag }}
             ${{ inputs.dockerhub_repo }}:latest
           labels: "built-by=github-actions"
