--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -56,6 +56,8 @@ jobs:
         if: matrix.step == 'checkout'
         run: |
           echo "🚀 Validating inputs..."
+          echo "DockerHub Repo: ${{ inputs.dockerhub_repo }}"
+          echo "Docker Tag: ${{ inputs.docker_tag }}"
           
           # Ensure dockerhub_repo is not empty
           if [[ -z "${{ inputs.dockerhub_repo }}" ]]; then
