--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -15,7 +15,7 @@ on:
         description: "Path to the Dockerfile"
         required: false
         type: string
-        default: "Dockerfile"
+        default: "./dockerfile"
       dockerhub_repo:
         description: "DockerHub repository name"
         required: false
@@ -44,7 +44,7 @@ jobs:
     steps:
       # ✅ Checkout Code
       - name: Checkout Repository
-        if: matrix.step == 'checkout'
+        if: ${{ matrix.step == 'checkout' }}
         uses: actions/checkout@v3
         with:
           ref: ${{ inputs.branch }}
@@ -53,7 +53,7 @@ jobs:
 
       # ✅ Validate Inputs
       - name: Validate Inputs
-        if: matrix.step == 'checkout'
+        if: ${{ matrix.step == 'checkout' }}
         run: |
           echo "🚀 Validating inputs..."
           echo "DockerHub Repo: ${{ inputs.dockerhub_repo }}"
@@ -77,7 +77,7 @@ jobs:
 
       # ✅ Validate Secrets
       - name: Validate Secrets
-        if: matrix.step == 'docker-login'
+        if: ${{ matrix.step == 'docker-login' }}
         run: |
           echo "🔐 Validating secrets..."
           if [[ -z "${{ secrets.DOCKERHUB_USERNAME }}" || -z "${{ secrets.DOCKERHUB_PASSWORD }}" ]]; then
@@ -88,7 +88,7 @@ jobs:
 
       # ✅ Docker Login
       - name: Log in to DockerHub
-        if: matrix.step == 'docker-login'
+        if: ${{ matrix.step == 'docker-login' }}
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
@@ -96,7 +96,7 @@ jobs:
 
       # ✅ Verify Docker Login
       - name: Verify Docker Login
-        if: matrix.step == 'docker-login'
+        if: ${{ matrix.step == 'docker-login' }}'
         run: |
           echo "🔍 Checking Docker login..."
           if ! docker info | grep -q 'Username'; then
@@ -107,12 +107,12 @@ jobs:
 
       # ✅ Set up Docker Buildx
       - name: Set up Docker Buildx
-        if: matrix.step == 'docker-build-push'
+        if: ${{ matrix.step == 'docker-build-push' }}
         uses: docker/setup-buildx-action@v2
 
       # ✅ Debug Docker Image Tags
       - name: Debug Docker Image Tags
-        if: matrix.step == 'docker-build-push'
+        if: ${{ matrix.step == 'docker-build-push' }}
         run: |
           echo "🐳 DockerHub Repo: ${{ inputs.dockerhub_repo }}"
           echo "🏷️ Docker Image Tag: ${{ env.docker_tag }}"
@@ -120,8 +120,8 @@ jobs:
 
       # ✅ Build and Push Docker Image
       - name: Build and Push Docker Image
-        if: matrix.step == 'docker-build-push'
-        uses: docker/build-push-action@v5
+        if: ${{ matrix.step == 'docker-build-push' }}
+        uses: docker/build-push-action@v3
         with:
           context: .
           file: ${{ inputs.dockerfile }}
