--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -1,4 +1,4 @@
-name: Validate Application Pipeline (Reusable)
+name: Validate and Push Docker Image (Reusable)
 
 on:
   workflow_call:
@@ -34,7 +34,7 @@ on:
         required: true
 
 jobs:
-  validate:
+  validate-and-push:
     runs-on: ubuntu-latest
     environment: ${{ matrix.deploy_env }}
 
@@ -44,7 +44,7 @@ jobs:
         dockerfile: ${{ fromJson(inputs.dockerfiles) }}
         docker_tag: ${{ fromJson(inputs.docker_tags) }}
         deploy_env: ${{ fromJson(inputs.deploy_envs) }}
-      fail-fast: false  # Ensures one failure does not stop other matrix jobs
+      fail-fast: false
 
     steps:
       - name: Checkout code
@@ -87,6 +87,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          file: ${{ matrix.dockerfile }}
+          push: true
+          tags: |
+            ${{ inputs.dockerhub_repo }}:${{ matrix.docker_tag }}
+          cache-from: type=registry,ref=${{ inputs.dockerhub_repo }}:latest
+          cache-to: type=inline
+
       - name: Debug Docker Image Tags
         run: |
-          echo "Using Docker tag: ${{ matrix.docker_tag }}"
+          echo "Successfully pushed Docker image: ${{ inputs.dockerhub_repo }}:${{ matrix.docker_tag }}"
